@@ -12,7 +12,7 @@ using namespace Pds_ConfigDb;
 ParameterSet::ParameterSet(const char* label,
 			   Pds::LinkedList<Parameter>* array,
 			   NumericInt<unsigned>&       nmembers) :
-  QComboBox(0),
+  QObject(0),
   Parameter(label),
   _array   (array),
   _nmembers(nmembers)
@@ -24,21 +24,21 @@ ParameterSet::~ParameterSet()
 QLayout* ParameterSet::initialize(QWidget* parent)
 {
   QHBoxLayout* layout = new QHBoxLayout;
-  layout->addWidget(new QLabel(_label));             
-  this->setParent(parent);
-  layout->addWidget(this);
+  layout->addWidget(new QLabel(_label));   
+  _box = new QComboBox(parent);
+  layout->addWidget(_box);
   flush();
   layout->setContentsMargins(0,0,0,0);               
   QObject::connect(_nmembers._input, SIGNAL(editingFinished()),
 		   this, SLOT(membersChanged()));
-  QObject::connect(this, SIGNAL(activated(int)), 
+  QObject::connect(_box, SIGNAL(activated(int)), 
 		   this, SLOT(launch(int)));
   return layout;                                     
 }
 
 void ParameterSet::launch(int index)
 {
-  SubDialog* d = new SubDialog(this,
+  SubDialog* d = new SubDialog(_box,
 			       _array[index]);
   d->exec();
   delete d;
@@ -53,13 +53,13 @@ void ParameterSet::update()
 {
 }
 
-void ParameterSet::flush()
+void ParameterSet::flush ()
 {
-  unsigned n = this->count();
+  unsigned n = _box->count();
   while(_nmembers.value < n)
-    this->removeItem(--n);
+    _box->removeItem(--n);
   while(_nmembers.value > n)
-    this->addItem(QString::number(n++));
-  QComboBox::update();
+    _box->addItem(QString::number(n++));
+  _box->update();
 }
 
